@@ -1,6 +1,6 @@
 Package: lme4
-Version: 0.9975-0
-Date: 2006-09-19
+Version: 0.9975-1
+Date: 2006-09-23
 Title: Linear mixed-effects models using S4 classes
 Author: Douglas Bates <bates@stat.wisc.edu> and
 	Deepayan Sarkar <deepayan@stat.wisc.edu>
