@@ -1795,8 +1795,7 @@ SEXP mer_MCMCsamp(SEXP x, SEXP savebp, SEXP nsampp, SEXP transp, SEXP verbosep)
  * @return pointer to an mer object
  */
 SEXP mer_create(SEXP fl, SEXP ZZt, SEXP Xp, SEXP yp, SEXP method,
-		 SEXP ncp, SEXP cnames, SEXP useS, SEXP call,
-		 SEXP family)
+		SEXP ncp, SEXP cnames, SEXP useS)
 {
     SEXP Omega, bVar, gradComp, fnms = getAttrib(fl, R_NamesSymbol),
 	val = PROTECT(NEW_OBJECT(MAKE_CLASS("mer"))), xnms;
@@ -1838,8 +1837,6 @@ SEXP mer_create(SEXP fl, SEXP ZZt, SEXP Xp, SEXP yp, SEXP method,
     SET_SLOT(val, lme4_cnamesSym, duplicate(cnames));
     if (!isInteger(ncp) || LENGTH(ncp) != nf)
 	error(_("ncp must be an integer vector of length %d"), nf);
-    SET_SLOT(val, lme4_callSym, duplicate(call));
-    SET_SLOT(val, lme4_familySym, duplicate(family));
     SET_SLOT(val, lme4_ncSym, duplicate(ncp));
     Gp = INTEGER(ALLOC_SLOT(val, lme4_GpSym, INTSXP, nf + 1));
     Gp[0] = 0;
